--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ input[type='file'].form-control {
 }
 
 .sudc_menu .navbar-collapse{
-   text-align: right;
+    text-align: left;
 }
 
 .sudc_menu .navbar-nav {
@@ -3171,13 +3171,19 @@ select.custom-select:after {
 .sudc_business_menu .navbar {
     background-color: #2298d0;
     border: 0;
-    margin: 40px 0 0px 0;
-    float: right;
+    margin: 25px 0 0px 0;
 }
 .sudc_business_menu .navbar> ul >li> a {
     color : #FFFFFF;
     font-size: 18px;
     font-weight: 500;
+}
+.sudc_business_menu .navbar-collapse {
+    float: right;
+}
+header.sticky_header .sudc_business_menu .logo {
+    width: 80%;
+    margin-top: -10px;
 }
 .sudc_business_menu .navbar> ul> li {
     margin-left: 20px;
@@ -3755,6 +3761,13 @@ p.validity {
     top: 160px;
     font-size: 14px;
 }
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+    background-color: #ffffff;
+}
+.navbar-collapse {
+    text-align: left;
+}
+
 
 
 @keyframes spin {
@@ -3784,13 +3797,17 @@ p.validity {
 
 
 @media screen and (max-width: 767px) {
+    .sudc_business_menu .logo img {
+        margin-top: 15px;
+        margin-left: 0px;
+    }
 
     .sudc_menu .navbar.navbar-default > .container {
         padding-right: 0px;
         padding-left: 15px;
     }
     .logo img {
-        max-width: 85%;
+        /*max-width: 85%;*/
         margin-left: 0;
         margin-right: 0;
     }
@@ -4089,6 +4106,7 @@ p.validity {
 
     .navbar-toggle {
         top: -5px;
+        margin-right: 0;
     }
 
     .dropbtn {
@@ -4451,6 +4469,22 @@ p.validity {
     header.sticky_header .logo_business .logo img {
         margin-top: 12px;
     }
+    header.sticky_header .sudc_business_menu .logo img {
+        margin-top: 0px;
+    }
+    .sticky_header .sudc_business_menu .navbar-toggle {
+        top: -10px;
+    }
+    .sudc_business_menu .navbar-collapse {
+        float: left;
+        width: 100%;
+    }
+    .sudc_business_menu .navbar-toggle {
+        top: 5px;
+    }
+    .sudc_menu .navbar-collapse {
+        text-align: left;
+    }
     .business_info_section p {
         padding: 30px 0px;
         color: #726f6f;
@@ -4494,6 +4528,7 @@ p.validity {
     }
     .logo_business {
         z-index: 2;
+        float: left;
     }
     .business-header-carousal {
         position: relative;
@@ -4520,7 +4555,7 @@ p.validity {
         font-size: 16px;
     }
     header.sticky_header  .logo_business  .logo img {
-        margin-top: 12px;
+        margin-top: 0px;
     }
     .business_content_home .content {
         padding: 0px 30px;
@@ -4675,7 +4710,7 @@ p.validity {
     }
 
     .navbar-toggle {
-        top: -5px;
+        top: 10px;
     }
 
     .dropbtn {
@@ -4712,7 +4747,7 @@ p.validity {
 
     .logo img {
         margin-bottom: 0;
-        width: 65%;
+        /*width: 65%;*/
     }
 
     .banner img {
@@ -4921,6 +4956,17 @@ p.validity {
     .advanced-modal-head.modal-header .close {
         right: 10px;
     }
+    .sudc_business_menu .navbar-collapse {
+        float: left;
+        width: 100%;
+    }
+    .sticky_header .navbar-toggle {
+        top: 5px;
+    }
+    .business.sticky_header .navbar-toggle {
+        top: -5px;
+    }
+
 }
 
 /*767*/
@@ -5052,7 +5098,7 @@ p.validity {
     }
 
     .logo {
-        margin-top: 15px;
+        margin-top: 20px;
         margin-left: 5px;
     }
 
@@ -5178,7 +5224,7 @@ p.validity {
     }
 
     .search-sec {
-        top: 72%;
+        top: 55%;
         left: 50%;
         padding: 25px;
     }
@@ -5377,6 +5423,18 @@ p.validity {
     .navbar-header {
         width: 15%;
     }
+    .sudc_business_menu .navbar-header {
+        width: 27%;
+    }
+    .sudc_menu .navbar-collapse {
+        padding-right: 15px;
+    }
+    .sudc_business_menu .navbar-collapse {
+        float: right;
+    }
+    .form-section .looking_select {
+        border: 5px solid rgba(0, 0, 0, 0.3);
+    }
 }
 
 /*991*/
@@ -5385,6 +5443,9 @@ p.validity {
 
     .about_the_card h1 {
         top: 40%;
+    }
+    .top_header {
+        margin: 10px 0px 0 0;
     }
 
     .menu_other_pages .looking label {
@@ -5473,6 +5534,9 @@ p.validity {
     }
     input[type='file'].form-control {
         padding: 0px 10px;
+    }
+    .sudc_business_menu .navbar-collapse {
+        float: right;
     }
 }
 
