--- a/css/style.css
+++ b/css/style.css
@@ -317,9 +317,9 @@ input[type='file'].form-control {
     left:100%;
     margin-top:-6px;
     margin-left:-1px;
-    -webkit-border-radius:0 6px 6px 6px;
-    -moz-border-radius:0 6px 6px 6px;
-    border-radius:0 6px 6px 6px;
+    -webkit-border-radius:0;
+    -moz-border-radius:0;
+    border-radius:0;
 }
 .dropdown-submenu>a:after{
     display:block;
@@ -3768,7 +3768,12 @@ p.validity {
     text-align: left;
 }
 
-
+.open>.dropdown-menu {
+    animation: slideup 1s;
+}
+.dropdown-menu {
+    border-radius: 0;
+}
 
 @keyframes spin {
     from {
@@ -3779,6 +3784,14 @@ p.validity {
     }
 }
 
+@keyframes slideup {
+    from {
+        transform:translateY(5px);
+    }
+    to {
+        transform:translateY(0);
+    }
+}
 
 
 
@@ -4985,6 +4998,27 @@ p.validity {
 
 /*767*/
 @media screen and (min-width : 768px) and (max-width: 991px) {
+
+    .dropdown-submenu>.dropdown-menu {
+        top: 0;
+        left: -100%;
+        right: auto!important;
+        margin-top: -6px;
+        margin-left: -1px;
+        -webkit-border-radius: 0 6px 6px 6px;
+        -moz-border-radius: 0 6px 6px 6px;
+        border-radius: 0 6px 6px 6px;
+    }
+
+    .dropdown-submenu.megamenu_subdrpdown >.dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-top: -6px;
+        margin-left: -1px;
+        -webkit-border-radius: 0 6px 6px 6px;
+        -moz-border-radius: 0 6px 6px 6px;
+        border-radius: 0 6px 6px 6px;
+    }
 
     .news_filter .input-group {
         margin-bottom: 20px;
