--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -380,14 +380,14 @@ p.font-weight-bold.grey.review_ques {
 
 .big_image_wraper img{
     width: 300px;
-    height: 300px;
+    height: 260px;
     margin: 15px auto;
 }
 .thumbnail_image_detail img{
     margin-left: 10px;
     float: left;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 52px;
 }
 .thumbnail_image_detail .img_wrapper {
     margin-bottom: 15px;
@@ -719,7 +719,7 @@ ul.a-unordered-list.a-vertical.a-spacing-none {
     font-weight: 500;
     line-height: 1.5;
     text-align: left;
-    white-space: nowrap;
+    white-space: pre-wrap;
     vertical-align: baseline;
     border-radius: .25em;
 }
