--- a/css/style.css
+++ b/css/style.css
@@ -3846,7 +3846,12 @@ button.busi_sub_btn {
 .userprofile_section_bill .table > thead > tr > .emptyrow {
     border-bottom: none;
 }
-
+.abcRioButtonBlue {
+    background-color: #4285f4;
+    border: none;
+    color: #fff;
+    width: 100%;
+}
 .userprofile_section_bill .table > tbody > tr > .highrow {
     border-top: 1px solid #1f9bd7;
 }
